tests/NormalTests/paczka2/big_fuzzy/46041519.err
Error in line 3: QBUQ A702 62,0
Error in line 2: YSm A773 13,7
Error in line 8: NipM A773 49,9
Error in line 11: OsVt1 A702 53,4
Error in line 27: YSm S513 24,7
Error in line 33: A702 A773 50,6
Error in line 24: Aeyp A702 54,4
Error in line 48: A702 S513 46,4
Error in line 52: VuTHhW S899 -6,4
Error in line 40: NipM A773 98,0
Error in line 45: VuTHhW S899 93,4
Error in line 61: QBUQ S899 14,43
Error in line 67: A702 S513 57,4
Error in line 72: VuTHhW A702 80,2
Error in line 71: NipM S513 3,4
Error in line 75: YSm A773 51,2
Error in line 68: QBUQ S899 2,6
Error in line 74: NipM A773 64,0
Error in line 80: NipM A702 33,2
Error in line 86: YSm S899 12,6
Error in line 41: OsVt1 S899 264,7
Error in line 110: VuTHhW S513 407,4
Error in line 119: Aeyp S899 90,6
Error in line 124: QBUQ A773 80,5
Error in line 127: OsVt1 A773 51,0
Error in line 118: NipM A702 24,4
Error in line 126: QBUQ S899 2,4
Error in line 128: OsVt1 S899 23,4
Error in line 131: OsVt1 A773 36,2
Error in line 122: Aeyp A702 34,0
Error in line 137: Aeyp A773 2,9
Error in line 146: VuTHhW A702 59,2
Error in line 159: VuTHhW A773 G9,4
Error in line 158: Aeyp S899 54,2
Error in line 171: A702 A702 28,5
Error in line 157: NipM S899 335,9
Error in line 178: Aeyp S513 4,7
Error in line 186: YSm A702 81,4
Error in line 187: YSm S513 37,1
Error in line 188: YSm S899 25,6
Error in line 197: YSm A773 24,5
Error in line 184: VuTHhW A773 91,6
Error in line 202: Aeyp A773 60,8
Error in line 209: QBUQ S899 72,9
Error in line 214: QBUQ A773 +9,+
Error in line 213: QBUQ A702 44,0
Error in line 200: YSm S513 7,4
Error in line 211: A702 S899 88,9
Error in line 220: NipM A773 97,3
Error in line 219: A702 S513 40,7
Error in line 224: NipM S513 937,4
Error in line 227: Aeyp A773 1,3
Error in line 229: Aeyp S513 80,0
Error in line 228: NipM S899 2,0
Error in line 234: OsVt1 A702 171,1
